2004-01-11  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/pdb/fileops.pdb
        * app/pdb/fileops_cmds.c: Make it build.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11979 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-11  Manish Singh  <yosh@gimp.org>
+
+	* tools/pdbgen/pdb/fileops.pdb
+	* app/pdb/fileops_cmds.c: Make it build.
+
 2004-01-11  Simon Budig  <simon@gimp.org>
 
 	* app/display/gimpdisplayshell-scale.c: further tweaks.
