--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-11  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2004-01-10  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Small update.
