--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-11  Simon Budig  <simon@gimp.org>
+
+	* app/display/gimpdisplayshell-scale.c: ensure that
+	"fit image to window" really always fits, despite the
+	resulting fractions are not as nice compared to the
+	fractions from zoom in/out.
+
 2004-01-11  Manish Singh  <yosh@gimp.org>
 
 	* tools/pdbgen/pdb/fileops.pdb
