* ko.po: Updated Korean translation by Dongsu Jang 	<iolo@hellocity.net>.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11985 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Dongsu Jang
+	<iolo@hellocity.net>.
+
 2004-01-11  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
