2004-01-11  Dave Neary  <bolsh@gimp.org>
        * etc/templaterc: Remove unusual "1200x900" template.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11986 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-11  Dave Neary  <bolsh@gimp.org>
+
+	* etc/templaterc: Remove unusual "1200x900" template.
+
 2004-01-11  Simon Budig  <simon@gimp.org>
 
 	* app/display/gimpdisplayshell-scale.c: ensure that
