Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11987 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-11  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation
+
 2004-01-11  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
