--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-11  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: small fuzzy fix.
+
 2004-01-11  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
