* plug-ins/common/CEL.c: fixed bug in registration of supported image types.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11990 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-11  Dov Grobgeld  <dov@imagic.weizmann.ac.il>
+
+	* plug-ins/common/CEL.c: fixed bug in registration
+	of supported file types for writing and enabled use of 
+	export functionality for the unsupported formats (gray
+	level).
+
 2004-01-11  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* app/core/gimpdrawable-preview.c (gimp_drawable_preview_scale):
