--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-11  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/gimpsignal.h
+	* plug-ins/gfig/gfig-preview.c: removed remaining EMX ifdefs spotted
+	by David Odin.
+
 2004-01-11  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/plugindetails.c: converted GtkCList and GTKCTree to
