--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-11  Manish Singh  <yosh@gimp.org>
+
+	* app/widgets/gtkwrapbox.c: Fix wrapped property.
+
 2004-01-11  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/gimpsignal.h
