--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Sven Neumann  <sven@gimp.org>
+
+	* gimptool-2.0.in: build the version number from just like it is done
+	for the pkg-config files.
+
 2004-01-11  Manish Singh  <yosh@gimp.org>
 
 	* app/widgets/gtkwrapbox.c: Fix wrapped property.
