2004-01-12  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/CML_explorer.c: render a grayscale preview when
	the plug-in is run on a grayscale drawable (fixes bug #82465).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11997 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2004-01-12  Sven Neumann  <sven@gimp.org>
 
-	* gimptool-2.0.in: build the version number from just like it is done
+	* plug-ins/common/CML_explorer.c: render a grayscale preview when
+	the plug-in is run on a grayscale drawable (fixes bug #82465).
+
+2004-01-12  Sven Neumann  <sven@gimp.org>
+
+	* gimptool-2.0.in: build the version number just like it is done
 	for the pkg-config files.
 
 2004-01-11  Manish Singh  <yosh@gimp.org>
