--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2004-01-12  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Dongsu Jang
