--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2004-01-11  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: small fuzzy fix.
