2004-01-12  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/CML_explorer.c (parse_line_to_gdouble): use
	g_ascii_strtod() instead of the locale-dependant atof().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11999 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-12  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/CML_explorer.c (parse_line_to_gdouble): use
+	g_ascii_strtod() instead of the locale-dependant atof().
+
+2004-01-12  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/CML_explorer.c: render a grayscale preview when
 	the plug-in is run on a grayscale drawable (fixes bug #82465).
 
