--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/tmpl/gimpsignal.sgml: updated after removal of
+	SA_RESTART for EMX.
+
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
 	* app/app.types: added gimp_dash_editor_get_type.
