--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-12  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/plug-in-menus.c (plug_in_menus_init): only call
+	bind_textdomain_codeset() when it is available. Spotted by
+	Reinhard Geissler (bug #131215).
+
 2004-01-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-projection.c (gimp_image_invalidate): applied
