--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-12  Sven Neumann  <sven@gimp.org>
 
+	* app/main.c (gimp_show_help): changed "compat" to "compatibility".
+
+2004-01-12  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/plug-in-menus.c (plug_in_menus_init): only call
 	bind_textdomain_codeset() when it is available. Spotted by
 	Reinhard Geisler (bug #131215).
