2004-01-12  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpchannel.c: converted tabs to spaces, cosmetics.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12007 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpchannel.c: converted tabs to spaces, cosmetics.
+
 2004-01-12  Sven Neumann  <sven@gimp.org>
 
 	* app/main.c (gimp_show_help): changed "compat" to "compatibility".
