--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-01-12  DindinX  <david@dindinx.org>
+
+	* libgimp/gimpmisc.[ch]: remove these files
+
+	* libgimp/gimppixelfetcher.c:
+	* libgimp/gimppixelfetcher.h:
+	* libgimp/gimpregioniterator.c:
+	* libgimp/gimpregioniterator.h: and created these ones.
+	  Regarding #125141, gimpmisc was split into gimppixelfetcher and
+	  gimpregioniterator.
+
+	* libgimp/Makefile.am:
+	* libgimp/gimp.h: modified accordingly.
+
 2004-01-12  Sven Neumann  <sven@gimp.org>
 
 	* data/misc/gimp.desktop.in.in (Exec): use 'gimp-remote-1.3 --new'
