--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Updated russian translation by Anatoly (Doc) Yakushin.
+
 2004-01-09  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
