2004-01-13  Artur Flinta  <aflinta@cvs.gnome.org>
	* pl.po: Updated Polish translation by GNOME PL Team.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12014 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2004-01-12  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Updated russian translation by Anatoly (Doc) Yakushin.
