--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-01-12  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Updated russian translation by Anatoly (Doc) Yakushin.
