--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpcompat.h: fixed definition of gimp_use_xshm().
+
 2004-01-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/base/gimphistogram.c: added GimpHistogramChannel index
