2004-01-13  Michael Natterer  <mitch@gimp.org>
	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpenums.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12021 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-13  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpenums.sgml: updated.
+
 2004-01-12  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/Makefile.am: don't skip "gimpmisc.h", it's gone.
