2004-01-13  Michael Natterer  <mitch@gimp.org>
	* app/composite/Makefile.am (AM_CPPFLAGS): G_LOG_DOMAIN should be
	"Gimp-Composite", not "Gimp-Composition".

	* app/app_procs.c (app_run): register a log handler for the
	"Gimp-Composite" domain.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12023 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-01-13  Michael Natterer  <mitch@gimp.org>
 
+	* app/composite/Makefile.am (AM_CPPFLAGS): G_LOG_DOMAIN should be
+	"Gimp-Composite", not "Gimp-Composition".
+
+	* app/app_procs.c (app_run): register a log handler for the
+	"Gimp-Composite" domain.
+
+2004-01-13  Michael Natterer  <mitch@gimp.org>
+
 	* app/base/base-enums.h: removed GimpChannelLutType enum and
 	export GimpHistogramChannel to the PDB. The removed enum was just
 	there for libgimp compatibility.
